--- a/TalentoCloud/html_css/MarcoZero.html
+++ b/TalentoCloud/html_css/MarcoZero.html
@@ -1,4 +1,3 @@
-file:///home/wendel/Documentos/estudo/nuvem/TalentoCloud/html_css/formulario.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,7 @@ file:///home/wendel/Documentos/estudo/nuvem/TalentoCloud/html_css/formulario.htm
     <title>Marco Zero</title>
 </head>
 <body>
+    <a href="RecifeAntigo.html">Link para Recife Antigo</a>
     <p>
         A cidade do Recife é uma das mais famosas do Nordeste, <br>
         ela possui diversos pontos turísticos e um deles é o Marco Zero. <br>
